Completed Invitefriend functionality

--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -178,7 +178,7 @@
                                                 </li>
                                             }
                                             <li id="liinvitefriends">
-                                                <a href="../patient/invitefriends.aspx">
+                                                <a href="@Url.Action("InviteFriend","Patients")">
                                                     <span class="Icon Icon--invite-friends Icon--large"></span>
                                                     <span class="text"><br />Invite Friends</span>
                                                 </a>
