--- a/MiraiConsultMVC/Views/Feed/Feed.cshtml
+++ b/MiraiConsultMVC/Views/Feed/Feed.cshtml
@@ -1,4 +1,4 @@
-﻿@using MiraiConsultMVC.Models.Feed
+﻿@model MiraiConsultMVC.Models.Feed
 @{
     ViewBag.Title = "Feed";
     Layout = "~/Views/Shared/_PatientMasterLayout.cshtml";
@@ -18,11 +18,14 @@
                         <input type="hidden" id="HdnRecordSize" name="HdnRecordSize" value="@Model.HdnRecordSize" />
                         <input type="hidden" id="HiddenUserType" name="HiddenUserType" value="@Model.HiddenUserType" />
                         <input type="hidden" id="hdnDocconnecturl" name="hdnDocconnecturl" value="@Model.hdnDocconnecturl" />
+                        <input type="hidden" id="FacebookAppKey" name="FacebookAppKey" value="@Model.FacebookAppKey" />
+                        <input type="hidden" id="AskmiraiUrl" name="AskmiraiUrl" value="@Model.AskmiraiUrl" />
+
                     </div>
                 </div>
             </div>
             <div style="text-align: center" id="loadingImage">
-                <img alt="Data Loading.." src="../Resources/image/ajax_loader.gif" style="width: 50px" />
+                <img alt="Data Loading.." src="~/Content/image/ajax_loader.gif" style="width: 50px" />
             </div>
         </div>
         <script type="text/javascript" src="https://connect.facebook.net/en_US/all.js"></script>
@@ -62,7 +65,7 @@
                             if (response[indexcnt].doctorimg)
                                 var img = (response[indexcnt].photourl) + escape(response[indexcnt].doctorimg);
                             else
-                                var img = "../Resources/image/img-na.png";
+                                var img = "../Content/image/img-na.png";
                             if (response[indexcnt].answerimg)
                                 var ansimg = "../feed/answerPhotos/" + escape(response[indexcnt].answerimg);
                             var template;
@@ -74,7 +77,7 @@
                                 title = response[indexcnt].title;
                             else
                                 title = "";
-                            template = "<div class='span12 custom-yellow-container'><div class='custom-inner-green-container'><a class='question_text' href='../patient/questiondetails.aspx?questionid=" + response[indexcnt].questionid + "'>" + response[indexcnt].questiontext + "</a></div> <div id=" + answerid + "ans>" +
+                            template = "<div class='span12 custom-yellow-container'><div class='custom-inner-green-container'><a class='question_text' href='../Patients/PatientQuestionDetails?questionid=" + response[indexcnt].questionid + "'>" + response[indexcnt].questiontext + "</a></div> <div id=" + answerid + "ans>" +
                             "<div class='inner-count-likes pull-right' title='Thanked By Patient'> " + thanxcount + "</div><div class='inner-count-endorse pull-right' title='Endorsed'>" + endorsecount + " </div></div></div><div class='row-fluid'>" +
                             "<div class='row-fluid custom-occupy'><div class='span1 hidden-phone'><div class='center_align'><div class='feedDocImage img' style='margin-bottom:10px'><img src=" + img + "></div></div></div><div class='visible-phone feedDocImage img' style='margin-bottom:10px'><img src=" + img + "></div><div class='span6  middle-size-padding '><div class='ans_time_detail'>Dr. " + response[indexcnt].answerreplyedby + " </div><div class='title_text'><b>" + title + "</b></div></div>";
                             if (document.getElementById("HiddenUserType").value != "0") {
@@ -95,14 +98,14 @@
                             if (document.getElementById("HiddenUserType").value != "0") {
                                 template = template + "<div class='row-fluid margintop_tosharebutn'>";
 
-                                var url = '<%= AskmiraiUrl %>';
-                                var FBappkey = '<%= FacebookAppKey %>';
-                                template = template + "<div class='top_marging_sharelink' style='width:100%'><div style='width:67%' class='hidden-phone pull-left'><hr style='margin:12px;'/></div><a href='#' onclick='shareOnFacebook(\"" + escape(response[indexcnt].questiontext) + "\",\"" + escape(response[indexcnt].answertext) + "\", \"" + escape(response[indexcnt].questionid) + "\", \"" + url.toString() + "\",\"" + FBappkey.toString() + "\")'><img title='Facebook' class='share_icons_width' src='../Resources/image/fb.png' alt='Facebook'></a>" +
+                                var url = document.getElementById("AskmiraiUrl").value;;
+                                var FBappkey = document.getElementById("FacebookAppKey").value;
+                                template = template + "<div class='top_marging_sharelink' style='width:100%'><div style='width:67%' class='hidden-phone pull-left'><hr style='margin:12px;'/></div><a href='#' onclick='shareOnFacebook(\"" + escape(response[indexcnt].questiontext) + "\",\"" + escape(response[indexcnt].answertext) + "\", \"" + escape(response[indexcnt].questionid) + "\", \"" + url.toString() + "\",\"" + FBappkey.toString() + "\")'><img title='Facebook' class='share_icons_width' src='../Content/image/fb.png' alt='Facebook'></a>" +
                                 //"<a class='share_link-margin ' target='_blank'  href='https://twitter.com/intent/tweet?button_hashtag=TwitterStories&text= Q. " + escape(response[indexcnt].questiontext) + " \n Ans. " + escape(response[indexcnt].answertext) + "'><img title='Twitter' class='share_icons_width' src='../Resources/image/twitter.png' alt='Twitter'></a>" +
-                                "<a class='share_link-margin ' target='_blank'  href='https://twitter.com/intent/tweet?button_hashtag=TwitterStories&text= " + url.toString() + "/patient/questiondetails.aspx?questionid=" + escape(response[indexcnt].questionid) + "'><img title='Twitter' class='share_icons_width' src='../Resources/image/twitter.png' alt='Twitter'></a>" +
-                                "<a class='share_link-margin ' target='' style='margin-right:10px;' href='mailto:?Subject=Mirai Consult has been shared an Answer with you &amp;Body= Q. " + escape(response[indexcnt].questiontext) + " %0D%0A  Ans. " + escape(response[indexcnt].answertext) + "'><img title='Email' class='share_icons_width' src='../Resources/image/mail.png' alt='Email'></a>";
+                                "<a class='share_link-margin ' target='_blank'  href='https://twitter.com/intent/tweet?button_hashtag=TwitterStories&text= " + url.toString() + "/patient/questiondetails.aspx?questionid=" + escape(response[indexcnt].questionid) + "'><img title='Twitter' class='share_icons_width' src='../Content/image/twitter.png' alt='Twitter'></a>" +
+                                "<a class='share_link-margin ' target='' style='margin-right:10px;' href='mailto:?Subject=Mirai Consult has been shared an Answer with you &amp;Body= Q. " + escape(response[indexcnt].questiontext) + " %0D%0A  Ans. " + escape(response[indexcnt].answertext) + "'><img title='Email' class='share_icons_width' src='../Content/image/mail.png' alt='Email'></a>";
                                 if (response[indexcnt].ispatientthank) {
-                                    template = template + "<a class='custom-green-text'><img src='../resources/image/thanks.png'/> Thanks its useful</a></div></div><br/>";
+                                    template = template + "<a class='custom-green-text'><img src='../Content/image/thanks.png'/> Thanks its useful</a></div></div><br/>";
                                 }
                                 else {
                                     var QuestionText = response[indexcnt].questiontext.replace(/\s{2,}/g, ' ');
