Complete functionality of report page.

--- a/MiraiConsultMVC/Views/Home/partialview/patientmenu.cshtml
+++ b/MiraiConsultMVC/Views/Home/partialview/patientmenu.cshtml
@@ -15,10 +15,10 @@
         }
         else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.SuperAdmin))
         { 
-        <li id="liManageDoctor"><a href="../../app/admin/ManageDoctors.aspx"><i class="icon-comment"></i>Signup Requests<i class=" icon-chevron-right icon_align"></i></a></li>
+        <li id="liManageDoctor"><a href="/User/ManageDoctors"><i class="icon-comment"></i>Signup Requests<i class=" icon-chevron-right icon_align"></i></a></li>
         <li id="liAdminQuestions"><a href="../../app/admin/QuestionList.aspx"><i class="icon-search"></i>Questions<i class=" icon-chevron-right icon_align"></i></a></li>
         <li id="liAdminFeed"><a href="../Feed/feed.aspx"><i class="icon-list-alt"></i>Feed<i class=" icon-chevron-right icon_align"></i></a></li>
-        <li id="liReports"><a href="../../app/admin/reports.aspx"><i class="icon-search"></i>Reports<i class=" icon-chevron-right icon_align"></i></a></li>
+        <li id="liReports"><a href="/Admin/Report"><i class="icon-search"></i>Reports<i class=" icon-chevron-right icon_align"></i></a></li>
         <li id="liManageTags"><a href="../../app/admin/managetags.aspx"><i class="icon-edit"></i>Manage Tags<i class=" icon-chevron-right icon_align"></i></a></li>
         }
         <li id="liinvitefriends"><a href="../patient/invitefriends.aspx"><i class="icon-share"></i>Invite Friends<i class=" icon-chevron-right icon_align"></i></a></li>
