--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -167,12 +167,12 @@
                                                     </a>
                                                 </li>
                                                 <li id="liReports">
-                                                    <a href="../../app/admin/reports.aspx">
+                                                    <a href="/Admin/Report">
                                                         <span class="Icon Icon--reports Icon--large"></span><span class="text"><br />Reports</span>
                                                     </a>
                                                 </li>
                                                 <li id="liManageDoctor">
-                                                    <a href="../../app/admin/ManageDoctors.aspx">
+                                                    <a href="/User/ManageDoctors">
                                                         <span class="Icon Icon--signup-requests Icon--large"></span><span class="text"><br />Signup Requests</span>
                                                     </a>
                                                 </li>
@@ -267,14 +267,14 @@
                                 </ul>
                                 <ul class="nav pull-right">
                                     <li>
-                                        <a href="../../app/admin/reports.aspx" class="menu-padding  reg-menu-padding">
+                                        <a href="/Admin/Report" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--reports Icon--large"></span> <span class="text font-bold menutext-margin-top"> Reports</span>
                                         </a>
                                     </li>
                                 </ul>
                                 <ul class="nav pull-right">
                                     <li>
-                                        <a href="../../app/admin/ManageDoctors.aspx" class="menu-padding  reg-menu-padding">
+                                        <a href="/User/ManageDoctors" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--signup-requests Icon--large"></span> <span class="text font-bold menutext-margin-top"> Signup Requests</span>
                                         </a>
                                     </li>
