--- a/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
+++ b/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
@@ -28,7 +28,7 @@
                             {
                                 <div class="span3">
                                     <input id="ChkRegisteredhdn" value="1"  name="Registered" type="hidden" />
-                                    <input id="ChkRegistered"  type="checkbox" checked="checked" />
+                                    <input id="ChkRegistered"  type="checkbox"  />
                                     <label class="checkbox chk_box_inline">Registered Doctors</label>
                                 </div>
                                 <div class="span3">
