--- a/MiraiConsultMVC/Views/admin/assignquestion.cshtml
+++ b/MiraiConsultMVC/Views/admin/assignquestion.cshtml
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="">
-            @if (Model != null && Model.ToList().Count < 0 )
+            @if (Model != null && Model.ToList().Count > 0 )
             { 
             <div class='row-fluid' style="word-break:break-all">
                 <div class="span10 ">
@@ -31,7 +31,13 @@
                     <div class="control-group">
                         <label class="control-label">Tags:</label>
                         <div class="controls">
-                            <asp:ListBox ID="lstOfTags" ClientIDMode="Static" runat="server" SelectionMode="Multiple" class="chzn-select max-width"></asp:ListBox>
+                                @Html.ListBox(
+                                                 "lstOfTags",
+                                                 ViewBag.tags as MultiSelectList,
+                                                                            new { @class = "chzn-select max-width" }
+                                    )
+
+
                         </div>
                     </div>
                 </div>
@@ -41,8 +47,9 @@
                     <div class="control-group">
                         <label class="control-label"></label>
                         <div class="controls">
-                            <asp:Button ID="btnCreateDoctorAccount" class="btn thanx" runat="server" AutoPostBack="true" OnClick="btnAddTags_Click" OnClientClick="return validatedata();"
-                                        Text="Add Tags" ValidationGroup="submit"></asp:Button>
+                            @*<asp:Button ID="btnCreateDoctorAccount" class="btn thanx" runat="server" AutoPostBack="true" OnClick="btnAddTags_Click" OnClientClick="return validatedata();"
+                                        Text="Add Tags" ValidationGroup="submit"></asp:Button>*@
+                            <input type="button" id="btnCreateDoctorAccount" value="Add Tags" class="btn thanx" />
                             <input type="button" id="btnClear" value="Cancel" class="btn cancel" onclick=" removeAssigntags()" />
                         </div>
                     </div>
@@ -111,7 +118,7 @@
             </div>
             <div class='row-fluid'>
                 <div class="span12 ">
-                    <div class="table-responsive">
+                    <div class="table-responsive" id="divToReplace">
                         <table cellpadding="0" cellspacing="0" border="0" class="custom-table zebra-striped"
                                id="assign-doctor-list" width="100%">
                             <thead>
@@ -137,8 +144,8 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @if (Model != null && Model.ToList().Count < 0)
-{
+                                @if (Model != null && Model.ToList().Count > 0)
+                                {
                                 for (int i = 0; i < Model.ToList().Count; i++)
                                 {
                                 if (i == 0)
@@ -167,7 +174,7 @@
                                         @Model.ToList()[i].specialities
                                     </td>
                                     <td style='word-wrap: break-word' class="last-row">
-                                        <a href="#" onclick="removeAssignDoctor(@Model.ToList()[i].userid , 2355)">
+                                        <a href="#" onclick="removeAssignDoctor(@Model.ToList()[i].userid , @Model.ToList()[i].Questionid)">
                                             <img class="cust-icon" src="../Content/image/revoke.png " id="removebtn">
                                         </a>
                                     </td>
@@ -180,7 +187,9 @@
                 </div>
             </div>
         </div>
-        <asp:HiddenField ID="hdndoctorIds" ClientIDMode="Static" runat="server" />
+        @*<asp:HiddenField ID="hdndoctorIds" ClientIDMode="Static" runat="server" />*@
+        <input type="hidden" id="hdndoctorIds" name="hdndoctorIds" />
+        <input type="hidden" id="hdnQuestionId" name="hdnQuestionId" value="@Model.ToList()[0].Questionid" />
         <div class="row-fluid">
             <div class="span12">
                 <hr class="bottomdivleftpadding" />
@@ -205,16 +214,30 @@
     }
     function removeAssignDoctor(userid, questionid) {
         if (confirm("Are you sure you want to remove this user from assigned doctors?") == true) {
-            var agent = navigator.userAgent;
-            var reg1 = /MSIE\s?(\d+)(?:\.(\d+))?/i;
-            var reg2 = /Trident\/7\./;
-            if (!(agent.match(reg1) || agent.match(reg2))) {
-                top.location.href = top.location.href;
-            }
-            var msg = PageMethods.RemoveAssignDoctorToQuetion(userid, questionid, onSuccess, onFailure);
-            if (msg == "Assign doctor has been removed successfully.") {
-                $(removebtn).parent().parents('tr').remove();
-            }
+            //var agent = navigator.userAgent;
+            //var reg1 = /MSIE\s?(\d+)(?:\.(\d+))?/i;
+            //var reg2 = /Trident\/7\./;
+            //if (!(agent.match(reg1) || agent.match(reg2))) {
+            //    top.location.href = top.location.href;
+            //}
+            //var msg = PageMethods.RemoveAssignDoctorToQuetion(userid, questionid, onSuccess, onFailure);
+
+            $.ajax({
+                type: 'GET',
+                dataType: 'json',
+                url: '/admin/RemoveAssignDoctorToQuetion?userid=' + userid + '&questionId=' + questionid,
+                success: function (response) {
+                    
+                    if (response == "Assign doctor has been removed successfully.") {
+                        //$(removebtn).parent().parents('tr').remove();
+                        window.location.reload(true);
+                    }
+                },
+                error: function (data) {
+                    alert("Error Occured");
+                }
+            });
+            
         }
     }
     function onSuccess(result) {
@@ -230,7 +253,62 @@
     }
     function btnAssign_Click() {
         $('.btnAssign').prop("disabled", true);
-        __doPostBack('AssignDoctor', doctorIds.join(","));
+        //__doPostBack('AssignDoctor', doctorIds.join(","));
+
+        $.ajax({
+            type: 'GET',
+            dataType: 'json',
+            //data: '"' + $('#city-select').val() + '"',
+            contentType: 'application/json',
+            url: '/admin/AssignDoctor?QuestionId=' + document.getElementById('hdnQuestionId').value + '&AssignDoctorIds=' + doctorIds.join(","),
+            success: function (response) {
+                var ListOfDoctors = '<table cellpadding="0" cellspacing="0" border="0" class="custom-table zebra-striped"' +
+                  'id="assign-doctor-list" width="100%">' +
+               '<thead>' +
+                   '<tr>'+
+                   '<th>'+
+                   '<b>Userid</b>'+
+                   '</th>'+
+                   '<th>'+
+                   '<b>Name</b>'+
+                   '</th>'+
+                   '<th>'+
+                   '<b>City</b>'+
+                   '</th>'+
+                   '<th>'+
+                   '<b>Location</b>'+
+                   '</th>'+
+                   '<th>'+
+                   '<b>Specialities</b>'+
+                   '</th>'+
+                   '<th class="minwidth-remove">'+
+                   '<b>Action</b>'+
+                   '</th>'+
+                   '</tr>'+
+                  '</thead>'+
+               '<tbody>' ;
+                var TextToAppend = "";
+                for (var i = 0; i < response.length; i++) {
+                     TextToAppend = TextToAppend +
+                        '<tr>' +
+                        '<td>' + response[i].userid + '</td>' +
+                        '<td>' + response[i].name + '</td>' +
+                        '<td style="word-wrap: break-word">' + response[i].cities + '</td>' +
+                        '<td style="word-wrap: break-word">' + response[i].locations + '</td>' +
+                        '<td style="word-wrap: break-word">' + response[i].specialities + '</td>' +
+                        '<td style="word-wrap: break-word" class="last-row">' +
+                        '<a href="#" onclick="removeAssignDoctor(' + response[i].userid +', ' + response[i].Questionid + ')"><img class="cust-icon" src="../Content/image/revoke.png" id="removebtn"></a></td>' +
+                        '</tr>' 
+                }
+                ListOfDoctors = ListOfDoctors + TextToAppend + '</tbody>' + '</table>'
+
+                $("#divToReplace").empty();
+                $("#divToReplace").append(ListOfDoctors);
+            },
+            error: function (data) {
+                alert("Error occured");
+            }
+        });
     }
     function btnCancel_Click() {
         __doPostBack(null, null);
@@ -315,7 +393,7 @@
         $.ajax({
             type: 'GET',
             dataType: 'json',
-            url: '../../Services/UserService.svc/fillDropdowns',
+            url: '/Services/UserService.svc/fillDropdowns',
             success: function (response) {
                 response = JSON.parse(response);
                 for (cnt = 0; cnt < response.length; cnt++)
@@ -367,7 +445,7 @@
             type: 'POST',
             data: '{ "cityid":"' + cityid + '" , "locationid":"' + locationid + '", "specialityOrName":"' + specialityOrName + '", "isEncrypt": "false"}',
             contentType: 'application/json',
-            url: "../../Services/UserService.svc/getDoctorList",
+            url: "/Services/UserService.svc/getDoctorList",
             success: function (response) {
                 response = JSON.parse(response);
                 $("#searchResult").empty();
@@ -413,7 +491,7 @@
             dataType: 'json',
             data: '"' + $('#city-select').val() + '"',
             contentType: 'application/json',
-            url: '../../Services/UserService.svc/getLocationsbyCity',
+            url: '/Services/UserService.svc/getLocationsbyCity',
             success: function (response) {
                 $('#locality-select').empty();
                 $('#locality-select').append('<option></option>');
