Complete the functionality of patient my activity.

--- a/MiraiConsultMVC/Views/Home/partialview/patientmenu.cshtml
+++ b/MiraiConsultMVC/Views/Home/partialview/patientmenu.cshtml
@@ -4,7 +4,7 @@
         if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient))
         {
         <li id="liaskdoc"><a href="../patient/askdoctor.aspx"><i class="icon-question-sign"></i>Ask Doctors<i class=" icon-chevron-right icon_align"></i></a></li>
-        <li id="liMyActivity"><a href="../patient/myactivity.aspx"><i class="icon-tasks"></i>My Activity<i class=" icon-chevron-right icon_align"></i></a></li>
+        <li id="liMyActivity"><a href="/Patients/Myactivity"><i class="icon-tasks"></i>My Activity<i class=" icon-chevron-right icon_align"></i></a></li>
         <li id="liFeed"><a href="../Feed/feed.aspx"><i class="icon-list-alt"></i>Feed<i class=" icon-chevron-right icon_align"></i></a></li>
         <li id="liFindDoc"><a href="../patient/finddoctor.aspx"><i class="icon-search"></i>Find a Doctor<i class=" icon-chevron-right icon_align"></i></a></li>
         }
