--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -119,7 +119,7 @@
                                                     </a>
                                                 </li>
                                                 <li id="liMyActivity" class="my-activity">
-                                                    <a href="../patient/myactivity.aspx">
+                                                    <a href="/Patients/Myactivity">
                                                         <span class="Icon Icon--my-activity Icon--large"></span><span class="text"><br />My Activity</span>
                                                     </a>
                                                 </li>
@@ -203,7 +203,7 @@
                                 </ul>
                                 <ul class="nav pull-right">
                                     <li class="my-activity">
-                                        <a href="../patient/myactivity.aspx" class="menu-padding  reg-menu-padding">
+                                        <a href="/Patients/Myactivity" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--my-activity Icon--large"></span> <span class="text font-bold menutext-margin-top">My Activity</span>
                                         </a>
                                     </li>
