--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -58,12 +58,12 @@
                                         <ul class="dropdown-menu pull-right">
                                             @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient))
                                             {
-                                                <li><a href =" @Url.Action("PatientProfile", "Patients")"><i class="icon-user"></i>My Profile</a></li>
-                                                <li><a href="../admin/changepassword.aspx"><i class="icon-key"></i>Change Password</a></li>
+                                                <li><a href ="@Url.Action("PatientProfile", "Patients")"><i class="icon-user"></i>My Profile</a></li>
+                                                <li><a href="/User/ChangePassword"><i class="icon-key"></i>Change Password</a></li>
                                             }
                                             else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Doctor))
                                             {
-                                                <li><a href="../../app/Profile/doctorprofile.aspx"><i class="icon-user"></i>My Profile</a></li>
+                                                <li><a href=""><i class="icon-user"></i>My Profile</a></li>
                                                 <li><a href="/User/Changepassword"><i class="icon-key"></i>Change Password</a></li>
                                             }
                                             <li>
@@ -119,7 +119,7 @@
                                                     </a>
                                                 </li>
                                                 <li id="liMyActivity" class="my-activity">
-                                                    <a href="../patient/myactivity.aspx">
+                                                    <a href="">
                                                         <span class="Icon Icon--my-activity Icon--large"></span><span class="text"><br />My Activity</span>
                                                     </a>
                                                 </li>
@@ -142,7 +142,7 @@
                                                     </a>
                                                 </li>
                                                 <li id="liDocQuestions">
-                                                    <a href="../doctor/questionlist.aspx">
+                                                    <a href="/Questions/QuestionList">
                                                         <span class="Icon Icon--questions Icon--large"></span>
                                                         <span runat="server" visible="false" id="unansweredQuestionCount" class="unansweredQuestionCount" clientidmode="Static"></span>
                                                         <span class="rightpaddingdiv text"><br />Questions</span>
@@ -162,7 +162,7 @@
                                                     </a>
                                                 </li>
                                                 <li id="liManageTags">
-                                                    <a href="../../app/admin/managetags.aspx">
+                                                    <a href="/admin/managetag">
                                                         <span class="Icon Icon--tags Icon--large"></span><span class="text"><br />Tags</span>
                                                     </a>
                                                 </li>
@@ -196,14 +196,14 @@
                             {
                                 <ul class="nav pull-right reguser-menu-top-margin">
                                     <li class="ask-doctor">
-                                        <a href="../patient/askdoctor.aspx" class="menu-padding reg-menu-padding">
+                                        <a href="/Patients/AskDoctor" class="menu-padding reg-menu-padding">
                                             <span class="Icon Icon--ask-doctor Icon--large"></span> <span class="text font-bold menutext-margin-top">Ask Doctors</span>
                                         </a>
                                     </li>
                                 </ul>
                                 <ul class="nav pull-right">
                                     <li class="my-activity">
-                                        <a href="../patient/myactivity.aspx" class="menu-padding  reg-menu-padding">
+                                        <a href="" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--my-activity Icon--large"></span> <span class="text font-bold menutext-margin-top">My Activity</span>
                                         </a>
                                     </li>
@@ -217,7 +217,7 @@
                                 </ul>
                                 <ul class="nav pull-right">
                                     <li class="find-doctors">
-                                        <a href="../patient/finddoctor.aspx" class="menu-padding  reg-menu-padding">
+                                        <a href="/finddoctor/finddoctors" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--find-doctor Icon--large"></span> <span class="text font-bold menutext-margin-top"> Find a Doctor</span>
                                         </a>
                                     </li>
@@ -227,14 +227,14 @@
                             {
                                 <ul class="nav pull-right reguser-menu-top-margin">
                                     <li>
-                                        <a href="../Feed/doctorfeed.aspx" class="menu-padding  reg-menu-padding">
+                                        <a href="/feed/Doctorfeed" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--answers Icon--large"></span> <span class="text font-bold menutext-margin-top">Answers</span>
                                         </a>
                                     </li>
                                 </ul>
                                 <ul class="nav pull-right">
                                     <li>
-                                        <a href="../doctor/questionlist.aspx" class="menu-padding  reg-menu-padding">
+                                        <a href="/Questions/QuestionList" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--questions Icon--large"></span>
                                             <span runat="server" visible="false" id="Span1" class="unansweredQuestionCount"></span>
                                             <span class="rightpaddingdiv text font-bold menutext-margin-top">Questions</span>
@@ -246,7 +246,7 @@
                             {
                                 <ul class="nav pull-right reguser-menu-top-margin">
                                     <li>
-                                        <a href="../../app/admin/QuestionList.aspx" class="menu-padding  reg-menu-padding">
+                                        <a href="/admin/QuestionList" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--questions Icon--large"></span><span class="text font-bold menutext-margin-top"> Questions</span>
                                         </a>
                                     </li>
@@ -260,7 +260,7 @@
                                 </ul>
                                 <ul class="nav pull-right">
                                     <li>
-                                        <a href="../../app/admin/managetags.aspx" class="menu-padding  reg-menu-padding">
+                                        <a href="/admin/managetag" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--tags Icon--large"></span> <span class="text font-bold menutext-margin-top"> Tags</span>
                                         </a>
                                     </li>
@@ -282,7 +282,7 @@
                             }
                             <ul class="nav pull-right">
                                 <li>
-                                    <a href="../patient/invitefriends.aspx" class="menu-padding  reg-menu-padding">
+                                    <a href="/patients/invitefriend" class="menu-padding  reg-menu-padding">
                                         <span class="Icon Icon--invite-friends Icon--large"></span>
                                         <span class="text font-bold menutext-margin-top"> Invite Friends</span>
                                     </a>
