--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -137,7 +137,7 @@
                                             else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Doctor))
                                             {
                                                 <li id="liDocFeed">
-                                                    <a href="../Feed/doctorfeed.aspx">
+                                                    <a href="/Feed/doctorfeed">
                                                         <span class="Icon Icon--answers Icon--large"></span><span class="text"><br />Answers</span>
                                                     </a>
                                                 </li>
@@ -203,11 +203,9 @@
                                 </ul>
                                 <ul class="nav pull-right">
                                     <li class="my-activity">
-<<<<<<< .mine
-                                        <a href="" class="menu-padding  reg-menu-padding">
-=======
+
                                         <a href="/Patients/Myactivity" class="menu-padding  reg-menu-padding">
->>>>>>> .theirs
+
                                             <span class="Icon Icon--my-activity Icon--large"></span> <span class="text font-bold menutext-margin-top">My Activity</span>
                                         </a>
                                     </li>
