--- a/MiraiConsultMVC/Views/User/Changepassword.cshtml
+++ b/MiraiConsultMVC/Views/User/Changepassword.cshtml
@@ -1,4 +1,15 @@
 ﻿@model MiraiConsultMVC.Models.User.ChangePassword
+
+@{
+    if (Session["UserId"] == null)
+    {
+        Layout = "~/Views/Shared/_AskmiraiMasterLayout.cshtml";
+    }
+    else
+    {
+        Layout = "~/Views/Shared/_PatientMasterLayout.cshtml";
+    }
+}
 <div class="row-fluid">
     <div class="span7 custom-center-small-div ">
         <div class='row-fluid'>
