--- a/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
+++ b/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IList<ModelUser>
-
+@{
+    Layout = "~/Views/Shared/_PatientMasterLayout.cshtml";        
+}
 <script src="~/Content/js/jquery-1.9.1.min.js"></script>
 <script src="~/Content/js/jquery.dataTables.js"></script>
 <script src="~/Content/js/bootstrap-pagination.js"></script>
@@ -196,7 +198,7 @@
         }
     }
     function showDoctorDetailById(DoctorID) {
-        window.location.href = "../profile/doctorprofile.aspx?UserId=" + DoctorID;
+        window.location.href = "/profile/doctorprofile?UserId=" + DoctorID;
     }
     function EndRequestHandler() {
         initDataTable();
