Complete the Question Details page functionality.

--- a/MiraiConsultMVC/Views/Patients/Myactivity.cshtml
+++ b/MiraiConsultMVC/Views/Patients/Myactivity.cshtml
@@ -21,10 +21,10 @@
                         </a>
                         }
                         else
-                        { 
-                        <a class="question_text" href="/Patient/Questiondetails?questionid=@question.QuestionId">
-                            @question.QuestionText
-                        </a>
+                        {
+                            <a class="question_text" href="/Patients/PatientQuestionDetails?questionid="@question.QuestionId>
+                                @question.QuestionText
+                            </a>
                         }
                     </div>
                     <div class='pull right custom-middle'>
