--- a/MiraiConsultMVC/Views/Questions/QuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/QuestionDetails.cshtml
@@ -97,12 +97,12 @@
                                                         <hr style="margin:12px;" />
                                                     </div>
                                                     <a href='#' onclick='shareOnFacebook("@HttpUtility.JavaScriptStringEncode(HttpUtility.HtmlEncode(Convert.ToString(item.QuestionText)))","@HttpUtility.JavaScriptStringEncode(HttpUtility.HtmlEncode(Convert.ToString(item.AnswerText)) )","@item.QuestionId","@ViewBag.AskmiraiUrl","@ViewBag.FacebookAppKey")'>
-                                                        <img title='Facebook' class='share_icons_width' src='../Resources/image/fb.png' alt='Facebook'>
+                                                        <img title='Facebook' class='share_icons_width' src='~/Content/image/fb.png' alt='Facebook'>
                                                     </a>
                                                     <a class='share_link-margin ' target='_blank' href='https://twitter.com/intent/tweet?button_hashtag=TwitterStories&text=@ViewBag.AskmiraiUrl/patient/QuestionDetails/QuestionId=@item.QuestionId'><img title='Twitter' class='share_icons_width' src='~/Content/image/twitter.png' alt='Twitter'></a>
 
                                                     <a class='share_link-margin ' href='mailto:?Subject=Mirai Consult has shared an Answer with you &amp;Body= Q. @item.QuestionText %0D%0A  Ans.  @item.AnswerText'>
-                                                        <img title='Email' class='share_icons_width' src='../Resources/image/mail.png' style="margin-right:10px;" alt='Email'>
+                                                        <img title='Email' class='share_icons_width' src='~/Content/image/mail.png' style="margin-right:10px;" alt='Email'>
                                                     </a>
                                                     @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient))
                             {
