partially completed doctor profile page

--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -157,7 +157,7 @@
                                             <ul class="dropdown-menu pull-right">
                                                  @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Doctor))
                                                 {
-                                                <li><a href="/Profile/DoctorProfile"><i class="icon-user"></i>My Profile</a></li>
+                                                <li><a href="@Url.Action("DoctorProfile","Doctors")"><i class="icon-user"></i>My Profile</a></li>
                                                 <li><a href="/Questions/DoctorQuestionList"><i class="icon-list-alt"></i>My Account</a></li>
                                                 <li><a href="/User/ChangePassword"><i class="icon-key"></i>Change Password</a></li>
                                                 }
